--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,8 @@
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+body{
+  min-height: 100vh;
+  width: 100%;
+  background-color: aqua;
+}
